testsuite/tests/parser/should_fail/T15849.stderr

T15849.hs:4:6: error:
    parse error on input ‘=’
